Testing bugfix on mobile devices.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,7 +29,7 @@
 }
 
 html, body{
-	min-height: 100%;
+	// min-height: 100%;
 }
 
 html{
@@ -286,7 +286,7 @@ footer{
 		}
 	}
 	.bottom{
-		height: 100%;
+		// height: 100%;
 	}
 	.bottom .container{
 		flex-direction: column;
@@ -344,7 +344,7 @@ footer{
 		}
 	}
 	.bottom{
-		height: 100%;
+		// height: 100%;
 	}
 	.bottom .container{
 		flex-direction: column;
